syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "kratos_bench/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/hello/{name}"
    };
  }
  
  // Ping interface
  rpc Ping (google.protobuf.Empty) returns (PongReply) {
    option (google.api.http) = {
      get: "/ping"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The pong response
message PongReply {
  string message = 1;
}
